@@ -1,3 +1,5 @@
+ - Add simple constructor (dim0, dim1) for C++ matrix Expressions
+ - Add example demonstrating the use of cpparg (C++ code in Python)
  - Add least squares solver for dense systems (wrapper for DGELS)
  - New linear algebra wrappers for LAPACK matrices and vectors
  - Experimental support for reconstruction of higher order functions
